--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require": {
         "php": "^8.5.0",
         "cline/morphism": "^1.3.0",
-        "cline/ruler": "^3.0.2",
+        "cline/ruler": "^3.1.0",
+        "cline/variable-keys": "^1.1",
         "illuminate/auth": "^12.0",
         "illuminate/cache": "^12.0",
         "illuminate/console": "^12.0",
@@ -28,11 +29,10 @@
         "illuminate/contracts": "^12.0",
         "illuminate/database": "^12.0",
         "illuminate/events": "^12.0",
-        "spatie/laravel-package-tools": "^1.92.7",
-        "cline/variable-keys": "^1.1"
+        "spatie/laravel-package-tools": "^1.92.7"
     },
     "require-dev": {
-        "cline/coding-standard": "^1.5.7",
+        "cline/coding-standard": "^1.5.8",
         "orchestra/testbench": "^10.8",
         "symfony/var-dumper": "^7.4.0"
     },
