--- a/.github/workflows/quality-assurance.yaml
+++ b/.github/workflows/quality-assurance.yaml
@@ -6,14 +6,64 @@ on:
   pull_request: ~
 
 jobs:
-  tests:
-    name: Tests (${{ matrix.db }}/${{ matrix.key-type }})
+  tests-sqlite:
+    name: Tests (sqlite/${{ matrix.key-type }})
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         php: ['8.5']
-        db: ['sqlite', 'mysql', 'pgsql']
+        key-type: ['id', 'numeric', 'ulid', 'uuid']
+    steps:
+      - uses: https://github.com/actions/checkout@v6
+      - uses: https://github.com/shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          coverage: pcov
+          tools: composer:v2
+          extensions: pdo_sqlite
+      - run: composer install --no-progress
+      - name: Run tests (id key type)
+        if: matrix.key-type == 'id'
+        env:
+          DB_CONNECTION: sqlite
+          WARDEN_PRIMARY_KEY_TYPE: id
+        run: vendor/bin/pest
+      - name: Run tests (numeric morph types)
+        if: matrix.key-type == 'numeric'
+        env:
+          DB_CONNECTION: sqlite
+          WARDEN_PRIMARY_KEY_TYPE: id
+          WARDEN_ACTOR_MORPH_TYPE: numeric
+          WARDEN_BOUNDARY_MORPH_TYPE: numeric
+          WARDEN_SUBJECT_MORPH_TYPE: numeric
+        run: vendor/bin/pest --configuration=phpunit.numeric.xml
+      - name: Run tests (ulid key type)
+        if: matrix.key-type == 'ulid'
+        env:
+          DB_CONNECTION: sqlite
+          WARDEN_PRIMARY_KEY_TYPE: ulid
+          WARDEN_ACTOR_MORPH_TYPE: ulid
+          WARDEN_BOUNDARY_MORPH_TYPE: ulid
+          WARDEN_SUBJECT_MORPH_TYPE: ulid
+        run: vendor/bin/pest --configuration=phpunit.ulid.xml
+      - name: Run tests (uuid key type)
+        if: matrix.key-type == 'uuid'
+        env:
+          DB_CONNECTION: sqlite
+          WARDEN_PRIMARY_KEY_TYPE: uuid
+          WARDEN_ACTOR_MORPH_TYPE: uuid
+          WARDEN_BOUNDARY_MORPH_TYPE: uuid
+          WARDEN_SUBJECT_MORPH_TYPE: uuid
+        run: vendor/bin/pest --configuration=phpunit.uuid.xml
+
+  tests-mysql:
+    name: Tests (mysql/${{ matrix.key-type }})
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        php: ['8.5']
         key-type: ['id', 'numeric', 'ulid', 'uuid']
     services:
       mysql:
@@ -24,6 +74,77 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    steps:
+      - uses: https://github.com/actions/checkout@v6
+      - uses: https://github.com/shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          tools: composer:v2
+          extensions: pdo_mysql
+      - run: composer install --no-progress
+      - name: Run tests (id key type)
+        if: matrix.key-type == 'id'
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: warden_test
+          DB_USERNAME: root
+          DB_PASSWORD: password
+          WARDEN_PRIMARY_KEY_TYPE: id
+        run: vendor/bin/pest
+      - name: Run tests (numeric morph types)
+        if: matrix.key-type == 'numeric'
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: warden_test
+          DB_USERNAME: root
+          DB_PASSWORD: password
+          WARDEN_PRIMARY_KEY_TYPE: id
+          WARDEN_ACTOR_MORPH_TYPE: numeric
+          WARDEN_BOUNDARY_MORPH_TYPE: numeric
+          WARDEN_SUBJECT_MORPH_TYPE: numeric
+        run: vendor/bin/pest --configuration=phpunit.numeric.xml
+      - name: Run tests (ulid key type)
+        if: matrix.key-type == 'ulid'
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: warden_test
+          DB_USERNAME: root
+          DB_PASSWORD: password
+          WARDEN_PRIMARY_KEY_TYPE: ulid
+          WARDEN_ACTOR_MORPH_TYPE: ulid
+          WARDEN_BOUNDARY_MORPH_TYPE: ulid
+          WARDEN_SUBJECT_MORPH_TYPE: ulid
+        run: vendor/bin/pest --configuration=phpunit.ulid.xml
+      - name: Run tests (uuid key type)
+        if: matrix.key-type == 'uuid'
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: warden_test
+          DB_USERNAME: root
+          DB_PASSWORD: password
+          WARDEN_PRIMARY_KEY_TYPE: uuid
+          WARDEN_ACTOR_MORPH_TYPE: uuid
+          WARDEN_BOUNDARY_MORPH_TYPE: uuid
+          WARDEN_SUBJECT_MORPH_TYPE: uuid
+        run: vendor/bin/pest --configuration=phpunit.uuid.xml
+
+  tests-pgsql:
+    name: Tests (pgsql/${{ matrix.key-type }})
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        php: ['8.5']
+        key-type: ['id', 'numeric', 'ulid', 'uuid']
+    services:
       postgres:
         image: postgres:16
         env:
@@ -37,29 +158,28 @@ jobs:
       - uses: https://github.com/shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          coverage: pcov
           tools: composer:v2
-          extensions: pdo_mysql, pdo_pgsql, pdo_sqlite
+          extensions: pdo_pgsql
       - run: composer install --no-progress
       - name: Run tests (id key type)
         if: matrix.key-type == 'id'
         env:
-          DB_CONNECTION: ${{ matrix.db }}
-          DB_HOST: ${{ matrix.db == 'mysql' && '127.0.0.1' || (matrix.db == 'pgsql' && '127.0.0.1' || '') }}
-          DB_PORT: ${{ matrix.db == 'mysql' && '3306' || (matrix.db == 'pgsql' && '5432' || '') }}
-          DB_DATABASE: ${{ matrix.db != 'sqlite' && 'warden_test' || '' }}
-          DB_USERNAME: ${{ matrix.db == 'mysql' && 'root' || (matrix.db == 'pgsql' && 'postgres' || '') }}
+          DB_CONNECTION: pgsql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+          DB_DATABASE: warden_test
+          DB_USERNAME: postgres
           DB_PASSWORD: password
           WARDEN_PRIMARY_KEY_TYPE: id
         run: vendor/bin/pest
       - name: Run tests (numeric morph types)
         if: matrix.key-type == 'numeric'
         env:
-          DB_CONNECTION: ${{ matrix.db }}
-          DB_HOST: ${{ matrix.db == 'mysql' && '127.0.0.1' || (matrix.db == 'pgsql' && '127.0.0.1' || '') }}
-          DB_PORT: ${{ matrix.db == 'mysql' && '3306' || (matrix.db == 'pgsql' && '5432' || '') }}
-          DB_DATABASE: ${{ matrix.db != 'sqlite' && 'warden_test' || '' }}
-          DB_USERNAME: ${{ matrix.db == 'mysql' && 'root' || (matrix.db == 'pgsql' && 'postgres' || '') }}
+          DB_CONNECTION: pgsql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+          DB_DATABASE: warden_test
+          DB_USERNAME: postgres
           DB_PASSWORD: password
           WARDEN_PRIMARY_KEY_TYPE: id
           WARDEN_ACTOR_MORPH_TYPE: numeric
@@ -69,11 +189,11 @@ jobs:
       - name: Run tests (ulid key type)
         if: matrix.key-type == 'ulid'
         env:
-          DB_CONNECTION: ${{ matrix.db }}
-          DB_HOST: ${{ matrix.db == 'mysql' && '127.0.0.1' || (matrix.db == 'pgsql' && '127.0.0.1' || '') }}
-          DB_PORT: ${{ matrix.db == 'mysql' && '3306' || (matrix.db == 'pgsql' && '5432' || '') }}
-          DB_DATABASE: ${{ matrix.db != 'sqlite' && 'warden_test' || '' }}
-          DB_USERNAME: ${{ matrix.db == 'mysql' && 'root' || (matrix.db == 'pgsql' && 'postgres' || '') }}
+          DB_CONNECTION: pgsql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+          DB_DATABASE: warden_test
+          DB_USERNAME: postgres
           DB_PASSWORD: password
           WARDEN_PRIMARY_KEY_TYPE: ulid
           WARDEN_ACTOR_MORPH_TYPE: ulid
@@ -83,11 +203,11 @@ jobs:
       - name: Run tests (uuid key type)
         if: matrix.key-type == 'uuid'
         env:
-          DB_CONNECTION: ${{ matrix.db }}
-          DB_HOST: ${{ matrix.db == 'mysql' && '127.0.0.1' || (matrix.db == 'pgsql' && '127.0.0.1' || '') }}
-          DB_PORT: ${{ matrix.db == 'mysql' && '3306' || (matrix.db == 'pgsql' && '5432' || '') }}
-          DB_DATABASE: ${{ matrix.db != 'sqlite' && 'warden_test' || '' }}
-          DB_USERNAME: ${{ matrix.db == 'mysql' && 'root' || (matrix.db == 'pgsql' && 'postgres' || '') }}
+          DB_CONNECTION: pgsql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+          DB_DATABASE: warden_test
+          DB_USERNAME: postgres
           DB_PASSWORD: password
           WARDEN_PRIMARY_KEY_TYPE: uuid
           WARDEN_ACTOR_MORPH_TYPE: uuid
