--- a/.github/workflows/quality-assurance.yaml
+++ b/.github/workflows/quality-assurance.yaml
@@ -62,6 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         php: ['8.5']
         key-type: ['id', 'numeric', 'ulid', 'uuid']
@@ -141,6 +142,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         php: ['8.5']
         key-type: ['id', 'numeric', 'ulid', 'uuid']
